name:                  gogol-adexchange-seller
version:               0.0.1
synopsis:              Ad Exchange Seller API Client.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

description:
    Gives Ad Exchange seller users access to their inventory and the ability
    to generate reports
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AdExchangeSeller
        , Network.Google.AdExchangeSeller.Types
        , Network.Google.Resource.AdExchangeSeller.Accounts.Adclients.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.Alerts.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.Customchannels.Get
        , Network.Google.Resource.AdExchangeSeller.Accounts.Customchannels.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.Get
        , Network.Google.Resource.AdExchangeSeller.Accounts.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.Metadata.Dimensions.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.Metadata.Metrics.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.Preferreddeals.Get
        , Network.Google.Resource.AdExchangeSeller.Accounts.Preferreddeals.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.Reports.Generate
        , Network.Google.Resource.AdExchangeSeller.Accounts.Reports.Saved.Generate
        , Network.Google.Resource.AdExchangeSeller.Accounts.Reports.Saved.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.URLchannels.List

    other-modules:
          Network.Google.AdExchangeSeller.Types.Product
        , Network.Google.AdExchangeSeller.Types.Sum

    build-depends:
          gogol-core == 0.0.1.*
        , base       >= 4.7 && < 5
