name:                  gogol-adexchange-seller
version:               0.5.0
synopsis:              Google Ad Exchange Seller SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    Accesses the inventory of Ad Exchange seller users and generates
    reports.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @v2.0@
    of the API.

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AdExchangeSeller
        , Network.Google.AdExchangeSeller.Types
        , Network.Google.Resource.AdExchangeSeller.Accounts.AdClients.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.Alerts.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.CustomChannels.Get
        , Network.Google.Resource.AdExchangeSeller.Accounts.CustomChannels.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.Get
        , Network.Google.Resource.AdExchangeSeller.Accounts.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.Metadata.Dimensions.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.Metadata.Metrics.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.PreferredDeals.Get
        , Network.Google.Resource.AdExchangeSeller.Accounts.PreferredDeals.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.Reports.Generate
        , Network.Google.Resource.AdExchangeSeller.Accounts.Reports.Saved.Generate
        , Network.Google.Resource.AdExchangeSeller.Accounts.Reports.Saved.List
        , Network.Google.Resource.AdExchangeSeller.Accounts.URLChannels.List

    other-modules:
          Network.Google.AdExchangeSeller.Types.Product
        , Network.Google.AdExchangeSeller.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
