cabal-version:      2.2
name:               gogol-adexchangebuyer2
version:            0.5.0
synopsis:           Google Ad Exchange Buyer API II SDK.
homepage:           https://github.com/brendanhay/gogol
bug-reports:        https://github.com/brendanhay/gogol/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:          Copyright (c) 2015-2022 Brendan Hay
category:           Google
build-type:         Simple
extra-source-files:
  README.md
  src/.gitkeep

description:
  Accesses the latest features for managing Authorized Buyers accounts, Real-Time Bidding configurations and auction metrics, and Marketplace programmatic deals.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v2beta1@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-adexchangebuyer2

flag no-field-selectors
  description: If field selectors should be omitted, requires GHC >=9.2
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  if (flag(no-field-selectors) && impl(ghc >=9.1))
    default-extensions: NoFieldSelectors

  exposed-modules:
    Network.Google.AdExchangeBuyer2
    Network.Google.AdExchangeBuyer2.Accounts.Clients.Create
    Network.Google.AdExchangeBuyer2.Accounts.Clients.Get
    Network.Google.AdExchangeBuyer2.Accounts.Clients.Invitations.Create
    Network.Google.AdExchangeBuyer2.Accounts.Clients.Invitations.Get
    Network.Google.AdExchangeBuyer2.Accounts.Clients.Invitations.List
    Network.Google.AdExchangeBuyer2.Accounts.Clients.List
    Network.Google.AdExchangeBuyer2.Accounts.Clients.Update
    Network.Google.AdExchangeBuyer2.Accounts.Clients.Users.Get
    Network.Google.AdExchangeBuyer2.Accounts.Clients.Users.List
    Network.Google.AdExchangeBuyer2.Accounts.Clients.Users.Update
    Network.Google.AdExchangeBuyer2.Accounts.Creatives.Create
    Network.Google.AdExchangeBuyer2.Accounts.Creatives.DealAssociations.Add
    Network.Google.AdExchangeBuyer2.Accounts.Creatives.DealAssociations.List
    Network.Google.AdExchangeBuyer2.Accounts.Creatives.DealAssociations.Remove
    Network.Google.AdExchangeBuyer2.Accounts.Creatives.Get
    Network.Google.AdExchangeBuyer2.Accounts.Creatives.List
    Network.Google.AdExchangeBuyer2.Accounts.Creatives.StopWatching
    Network.Google.AdExchangeBuyer2.Accounts.Creatives.Update
    Network.Google.AdExchangeBuyer2.Accounts.Creatives.Watch
    Network.Google.AdExchangeBuyer2.Accounts.FinalizedProposals.List
    Network.Google.AdExchangeBuyer2.Accounts.FinalizedProposals.Pause
    Network.Google.AdExchangeBuyer2.Accounts.FinalizedProposals.Resume
    Network.Google.AdExchangeBuyer2.Accounts.Products.Get
    Network.Google.AdExchangeBuyer2.Accounts.Products.List
    Network.Google.AdExchangeBuyer2.Accounts.Proposals.Accept
    Network.Google.AdExchangeBuyer2.Accounts.Proposals.AddNote
    Network.Google.AdExchangeBuyer2.Accounts.Proposals.CancelNegotiation
    Network.Google.AdExchangeBuyer2.Accounts.Proposals.CompleteSetup
    Network.Google.AdExchangeBuyer2.Accounts.Proposals.Create
    Network.Google.AdExchangeBuyer2.Accounts.Proposals.Get
    Network.Google.AdExchangeBuyer2.Accounts.Proposals.List
    Network.Google.AdExchangeBuyer2.Accounts.Proposals.Pause
    Network.Google.AdExchangeBuyer2.Accounts.Proposals.Resume
    Network.Google.AdExchangeBuyer2.Accounts.Proposals.Update
    Network.Google.AdExchangeBuyer2.Accounts.PublisherProfiles.Get
    Network.Google.AdExchangeBuyer2.Accounts.PublisherProfiles.List
    Network.Google.AdExchangeBuyer2.Bidders.Accounts.FilterSets.BidMetrics.List
    Network.Google.AdExchangeBuyer2.Bidders.Accounts.FilterSets.BidResponseErrors.List
    Network.Google.AdExchangeBuyer2.Bidders.Accounts.FilterSets.BidResponsesWithoutBids.List
    Network.Google.AdExchangeBuyer2.Bidders.Accounts.FilterSets.Create
    Network.Google.AdExchangeBuyer2.Bidders.Accounts.FilterSets.Delete
    Network.Google.AdExchangeBuyer2.Bidders.Accounts.FilterSets.FilteredBidRequests.List
    Network.Google.AdExchangeBuyer2.Bidders.Accounts.FilterSets.FilteredBids.Creatives.List
    Network.Google.AdExchangeBuyer2.Bidders.Accounts.FilterSets.FilteredBids.Details.List
    Network.Google.AdExchangeBuyer2.Bidders.Accounts.FilterSets.FilteredBids.List
    Network.Google.AdExchangeBuyer2.Bidders.Accounts.FilterSets.Get
    Network.Google.AdExchangeBuyer2.Bidders.Accounts.FilterSets.ImpressionMetrics.List
    Network.Google.AdExchangeBuyer2.Bidders.Accounts.FilterSets.List
    Network.Google.AdExchangeBuyer2.Bidders.Accounts.FilterSets.LosingBids.List
    Network.Google.AdExchangeBuyer2.Bidders.Accounts.FilterSets.NonBillableWinningBids.List
    Network.Google.AdExchangeBuyer2.Bidders.FilterSets.BidMetrics.List
    Network.Google.AdExchangeBuyer2.Bidders.FilterSets.BidResponseErrors.List
    Network.Google.AdExchangeBuyer2.Bidders.FilterSets.BidResponsesWithoutBids.List
    Network.Google.AdExchangeBuyer2.Bidders.FilterSets.Create
    Network.Google.AdExchangeBuyer2.Bidders.FilterSets.Delete
    Network.Google.AdExchangeBuyer2.Bidders.FilterSets.FilteredBidRequests.List
    Network.Google.AdExchangeBuyer2.Bidders.FilterSets.FilteredBids.Creatives.List
    Network.Google.AdExchangeBuyer2.Bidders.FilterSets.FilteredBids.Details.List
    Network.Google.AdExchangeBuyer2.Bidders.FilterSets.FilteredBids.List
    Network.Google.AdExchangeBuyer2.Bidders.FilterSets.Get
    Network.Google.AdExchangeBuyer2.Bidders.FilterSets.ImpressionMetrics.List
    Network.Google.AdExchangeBuyer2.Bidders.FilterSets.List
    Network.Google.AdExchangeBuyer2.Bidders.FilterSets.LosingBids.List
    Network.Google.AdExchangeBuyer2.Bidders.FilterSets.NonBillableWinningBids.List
    Network.Google.AdExchangeBuyer2.Types

  other-modules:
    Network.Google.AdExchangeBuyer2.Internal.Product
    Network.Google.AdExchangeBuyer2.Internal.Sum

  build-depends:
    , base        >=4.12  && <5
    , gogol-core  >=0.5.0 && <0.5.1
