name:                  gogol-adexperiencereport
version:               0.5.0
synopsis:              Google Ad Experience Report SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    Views Ad Experience Report data, and gets a list of sites that have a
    significant number of annoying ads.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @v1@
    of the API.

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AdExperienceReport
        , Network.Google.AdExperienceReport.Types
        , Network.Google.Resource.AdExperienceReport.Sites.Get
        , Network.Google.Resource.AdExperienceReport.ViolatingSites.List

    other-modules:
          Network.Google.AdExperienceReport.Types.Product
        , Network.Google.AdExperienceReport.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
