name:                  gogol-admin-datatransfer
version:               0.0.1
synopsis:              Admin Data Transfer API Client.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

description:
    Admin Data Transfer API lets you transfer user data from one user to
    another.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AdminDataTransfer
        , Network.Google.AdminDataTransfer.Types
        , Network.Google.Resource.Datatransfer.Applications.Get
        , Network.Google.Resource.Datatransfer.Applications.List
        , Network.Google.Resource.Datatransfer.Transfers.Get
        , Network.Google.Resource.Datatransfer.Transfers.Insert
        , Network.Google.Resource.Datatransfer.Transfers.List

    other-modules:
          Network.Google.AdminDataTransfer.Types.Product
        , Network.Google.AdminDataTransfer.Types.Sum

    build-depends:
          gogol-core == 0.0.1.*
        , base       >= 4.7 && < 5
