name:                  gogol-admin-datatransfer
version:               0.5.0
synopsis:              Google Admin Data Transfer SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    Transfers user data from one user to another.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @datatransfer_v1@
    of the API.

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.DataTransfer
        , Network.Google.DataTransfer.Types
        , Network.Google.Resource.DataTransfer.Applications.Get
        , Network.Google.Resource.DataTransfer.Applications.List
        , Network.Google.Resource.DataTransfer.Transfers.Get
        , Network.Google.Resource.DataTransfer.Transfers.Insert
        , Network.Google.Resource.DataTransfer.Transfers.List

    other-modules:
          Network.Google.DataTransfer.Types.Product
        , Network.Google.DataTransfer.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
