name:                  gogol-admin-directory
version:               0.5.0
synopsis:              Google Admin Directory SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    Manages enterprise resources such as users and groups, administrative
    notifications, security features, and more.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @directory_v1@
    of the API.

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.Directory
        , Network.Google.Directory.Types
        , Network.Google.Resource.Admin.Channels.Stop
        , Network.Google.Resource.Directory.Asps.Delete
        , Network.Google.Resource.Directory.Asps.Get
        , Network.Google.Resource.Directory.Asps.List
        , Network.Google.Resource.Directory.ChromeosDevices.Action
        , Network.Google.Resource.Directory.ChromeosDevices.Get
        , Network.Google.Resource.Directory.ChromeosDevices.List
        , Network.Google.Resource.Directory.ChromeosDevices.MoveDevicesToOu
        , Network.Google.Resource.Directory.ChromeosDevices.Patch
        , Network.Google.Resource.Directory.ChromeosDevices.Update
        , Network.Google.Resource.Directory.Customers.Get
        , Network.Google.Resource.Directory.Customers.Patch
        , Network.Google.Resource.Directory.Customers.Update
        , Network.Google.Resource.Directory.DomainAliases.Delete
        , Network.Google.Resource.Directory.DomainAliases.Get
        , Network.Google.Resource.Directory.DomainAliases.Insert
        , Network.Google.Resource.Directory.DomainAliases.List
        , Network.Google.Resource.Directory.Domains.Delete
        , Network.Google.Resource.Directory.Domains.Get
        , Network.Google.Resource.Directory.Domains.Insert
        , Network.Google.Resource.Directory.Domains.List
        , Network.Google.Resource.Directory.Groups.Aliases.Delete
        , Network.Google.Resource.Directory.Groups.Aliases.Insert
        , Network.Google.Resource.Directory.Groups.Aliases.List
        , Network.Google.Resource.Directory.Groups.Delete
        , Network.Google.Resource.Directory.Groups.Get
        , Network.Google.Resource.Directory.Groups.Insert
        , Network.Google.Resource.Directory.Groups.List
        , Network.Google.Resource.Directory.Groups.Patch
        , Network.Google.Resource.Directory.Groups.Update
        , Network.Google.Resource.Directory.Members.Delete
        , Network.Google.Resource.Directory.Members.Get
        , Network.Google.Resource.Directory.Members.HasMember
        , Network.Google.Resource.Directory.Members.Insert
        , Network.Google.Resource.Directory.Members.List
        , Network.Google.Resource.Directory.Members.Patch
        , Network.Google.Resource.Directory.Members.Update
        , Network.Google.Resource.Directory.MobileDevices.Action
        , Network.Google.Resource.Directory.MobileDevices.Delete
        , Network.Google.Resource.Directory.MobileDevices.Get
        , Network.Google.Resource.Directory.MobileDevices.List
        , Network.Google.Resource.Directory.Notifications.Delete
        , Network.Google.Resource.Directory.Notifications.Get
        , Network.Google.Resource.Directory.Notifications.List
        , Network.Google.Resource.Directory.Notifications.Patch
        , Network.Google.Resource.Directory.Notifications.Update
        , Network.Google.Resource.Directory.OrgUnits.Delete
        , Network.Google.Resource.Directory.OrgUnits.Get
        , Network.Google.Resource.Directory.OrgUnits.Insert
        , Network.Google.Resource.Directory.OrgUnits.List
        , Network.Google.Resource.Directory.OrgUnits.Patch
        , Network.Google.Resource.Directory.OrgUnits.Update
        , Network.Google.Resource.Directory.Privileges.List
        , Network.Google.Resource.Directory.ResolvedAppAccessSettings.GetSettings
        , Network.Google.Resource.Directory.ResolvedAppAccessSettings.ListTrustedApps
        , Network.Google.Resource.Directory.Resources.Buildings.Delete
        , Network.Google.Resource.Directory.Resources.Buildings.Get
        , Network.Google.Resource.Directory.Resources.Buildings.Insert
        , Network.Google.Resource.Directory.Resources.Buildings.List
        , Network.Google.Resource.Directory.Resources.Buildings.Patch
        , Network.Google.Resource.Directory.Resources.Buildings.Update
        , Network.Google.Resource.Directory.Resources.Calendars.Delete
        , Network.Google.Resource.Directory.Resources.Calendars.Get
        , Network.Google.Resource.Directory.Resources.Calendars.Insert
        , Network.Google.Resource.Directory.Resources.Calendars.List
        , Network.Google.Resource.Directory.Resources.Calendars.Patch
        , Network.Google.Resource.Directory.Resources.Calendars.Update
        , Network.Google.Resource.Directory.Resources.Features.Delete
        , Network.Google.Resource.Directory.Resources.Features.Get
        , Network.Google.Resource.Directory.Resources.Features.Insert
        , Network.Google.Resource.Directory.Resources.Features.List
        , Network.Google.Resource.Directory.Resources.Features.Patch
        , Network.Google.Resource.Directory.Resources.Features.Rename
        , Network.Google.Resource.Directory.Resources.Features.Update
        , Network.Google.Resource.Directory.RoleAssignments.Delete
        , Network.Google.Resource.Directory.RoleAssignments.Get
        , Network.Google.Resource.Directory.RoleAssignments.Insert
        , Network.Google.Resource.Directory.RoleAssignments.List
        , Network.Google.Resource.Directory.Roles.Delete
        , Network.Google.Resource.Directory.Roles.Get
        , Network.Google.Resource.Directory.Roles.Insert
        , Network.Google.Resource.Directory.Roles.List
        , Network.Google.Resource.Directory.Roles.Patch
        , Network.Google.Resource.Directory.Roles.Update
        , Network.Google.Resource.Directory.Schemas.Delete
        , Network.Google.Resource.Directory.Schemas.Get
        , Network.Google.Resource.Directory.Schemas.Insert
        , Network.Google.Resource.Directory.Schemas.List
        , Network.Google.Resource.Directory.Schemas.Patch
        , Network.Google.Resource.Directory.Schemas.Update
        , Network.Google.Resource.Directory.Tokens.Delete
        , Network.Google.Resource.Directory.Tokens.Get
        , Network.Google.Resource.Directory.Tokens.List
        , Network.Google.Resource.Directory.Users.Aliases.Delete
        , Network.Google.Resource.Directory.Users.Aliases.Insert
        , Network.Google.Resource.Directory.Users.Aliases.List
        , Network.Google.Resource.Directory.Users.Aliases.Watch
        , Network.Google.Resource.Directory.Users.Delete
        , Network.Google.Resource.Directory.Users.Get
        , Network.Google.Resource.Directory.Users.Insert
        , Network.Google.Resource.Directory.Users.List
        , Network.Google.Resource.Directory.Users.MakeAdmin
        , Network.Google.Resource.Directory.Users.Patch
        , Network.Google.Resource.Directory.Users.Photos.Delete
        , Network.Google.Resource.Directory.Users.Photos.Get
        , Network.Google.Resource.Directory.Users.Photos.Patch
        , Network.Google.Resource.Directory.Users.Photos.Update
        , Network.Google.Resource.Directory.Users.Undelete
        , Network.Google.Resource.Directory.Users.Update
        , Network.Google.Resource.Directory.Users.Watch
        , Network.Google.Resource.Directory.VerificationCodes.Generate
        , Network.Google.Resource.Directory.VerificationCodes.Invalidate
        , Network.Google.Resource.Directory.VerificationCodes.List

    other-modules:
          Network.Google.Directory.Types.Product
        , Network.Google.Directory.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
